--- a/microservices-parent/docker-compose.yml
+++ b/microservices-parent/docker-compose.yml
@@ -1,3 +1,13 @@
+# ----------------------------------
+# Command to run this compose file:
+# 1. docker-compose -p microservices-comp3095 -f docker-compose.yml up -d
+# -- This command will start all the containers in detached mode (-d)
+#    without rebuilding the images if they already exist.
+#
+# 2. docker-compose -p microservices-comp3095 -f docker-compose.yml up -d --build
+# -- This command will start all the containers in detached mode (-d)
+#    without rebuilding the images even if they already exist.
+# ----------------------------------
 services:
 
   product-service:
@@ -14,3 +24,40 @@ services:
       - mongodb
     networks:
       - spring
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "28017:27017"
+    container_name: mongodb
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=pass
+    volumes:
+      - ./docker/integrated/mongo/data/products:/data/db
+      - ./docker/integrated/mongo/init/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+    networks:
+      - spring
+
+  mongo-express:
+    image: mongo:latest
+    ports:
+      - "8081:8081"
+    container_name: mongo-express
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=pass
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
+    depends_on:
+      - mongodb
+    networks:
+      - spring
+
+volumes:
+  mongo-db:
+    driver: local
+
+networks:
+  spring:
+    driver: bridge
