--- a/microservices-parent/product-service/Dockerfile
+++ b/microservices-parent/product-service/Dockerfile
@@ -4,7 +4,6 @@
 FROM gradle:8-jdk21 AS builder
 
 COPY --chown=gradle:gradle . /home/gradle/src
-
 WORKDIR /home/gradle/src
 
 RUN ./gradlew build -x test
@@ -19,7 +18,7 @@ RUN mkdir /app
 COPY --from=builder /home/gradle/src/build/libs/*.jar /app/product-service.jar
 
 ENV MONGO_DB_USERNAME=admin \
-    MONGO_DB_PWD=password \
+    MONGO_DB_PWD=password
 
 EXPOSE 8084
 
