--- a/microservices-parent/docker/standalone/postgres/order-service/docker-compose.yml
+++ b/microservices-parent/docker/standalone/postgres/order-service/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=user@domain.ca
       - PGADMIN_DEFAULT_PASSWORD=password
-    container_name: pgadmin
+    container_name: pgadmin-local-order
 
 volumes:
   postgres_data:
