--- a/microservices-parent/order-service/src/main/resources/application.properties
+++ b/microservices-parent/order-service/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+inventory.service.url=http://localhost:8083
