--- a/microservices-parent/order-service/Dockerfile
+++ b/microservices-parent/order-service/Dockerfile
@@ -12,7 +12,7 @@ RUN ./gradlew build -x test
 # ------
 # Package Stage
 # ------
-FROM openjdk:17-jdk
+FROM eclipse-temurin:17-jdk
 
 RUN mkdir /app
 
