--- a/microservices-parent/product-service/Dockerfile
+++ b/microservices-parent/product-service/Dockerfile
@@ -11,7 +11,7 @@ RUN ./gradlew build -x test
 # ------
 # Package Stage
 # ------
-FROM openjdk:17-jdk
+FROM eclipse-temurin:17-jdk
 
 RUN mkdir /app
 
