--- a/microservices-parent/product-service/src/main/resources/application.properties
+++ b/microservices-parent/product-service/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.data.mongodb.database=product-service
 #spring.data.mongodb.username=admin
 #spring.data.mongodb.password=password
 #spring.data.mongodb.authentication-database=admin
+
+#Enable Caching
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=password
+spring.cache.redis.time-to-live=60s
