--- a/microservices-parent/product-service/src/main/resources/application-docker.properties
+++ b/microservices-parent/product-service/src/main/resources/application-docker.properties
@@ -8,3 +8,9 @@ spring.data.mongodb.database=product-service
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+spring.data.redis.password=password
+spring.cache.type=redis
+spring.cache.redis.time-to-live=60s
