--- a/microservices-parent/docker-compose.yml
+++ b/microservices-parent/docker-compose.yml
@@ -61,7 +61,8 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=none
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
-      - postgres-inventory
+      postgres-inventory:
+        condition: service_healthy
     networks:
       - spring
 
@@ -80,7 +81,8 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=none
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
-      - postgres-order
+      postgres-order:
+        condition: service_healthy
     networks:
       - spring
 
@@ -112,6 +114,12 @@ services:
       - ./docker/integrated/postgres/service/init/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     networks:
       - spring
 
@@ -128,6 +136,12 @@ services:
       - ./docker/integrated/postgres/order/init/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5434:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     networks:
       - spring
 
@@ -149,7 +163,7 @@ services:
     container_name: mongodb
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=pass
+      - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
       - ./docker/integrated/mongo/data/products:/data/db
       - ./docker/integrated/mongo/init/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
@@ -163,7 +177,7 @@ services:
     container_name: mongo-express
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=pass
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
       - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
     depends_on:
