Add Swagger UI, Keycloak and Kafka

--- a/microservices-parent/api-gateway/Dockerfile
+++ b/microservices-parent/api-gateway/Dockerfile
@@ -3,11 +3,10 @@
 # ------
 FROM gradle:8.10.2-jdk17 AS builder
 
-COPY --chown=gradle:gradle . /home/gradle/src
-
 WORKDIR /home/gradle/src
+COPY --chown=gradle:gradle . .
 
-RUN ./gradlew build -x test
+RUN ./gradlew :api-gateway:build -x test
 
 # ------
 # Package Stage
@@ -16,7 +15,7 @@ FROM eclipse-temurin:17-jre
 
 RUN mkdir /app
 
-COPY --from=builder /home/gradle/src/build/libs/*.jar /app/api-gateway.jar
+COPY --from=builder /home/gradle/src/api-gateway/build/libs/*SNAPSHOT.jar /app/api-gateway.jar
 
 EXPOSE 9000
 
