--- a/microservices-parent/product-service/src/main/resources/application-docker.properties
+++ b/microservices-parent/product-service/src/main/resources/application-docker.properties
@@ -1,5 +1,7 @@
 spring.application.name=product-service
 
+product-service.version=v1.0
+
 server.port=8084
 
 spring.data.mongodb.host=mongodb
@@ -14,3 +16,8 @@ spring.data.redis.port=6379
 spring.data.redis.password=password
 spring.cache.type=redis
 spring.cache.redis.time-to-live=60s
+
+#Swagger GUI documentation location - http://localhost:8084/swagger-ui
+springdoc.swagger-ui.path=/swagger-ui
+#Swagger JSON documentation location - http://localhost:8084/api-docs
+springdoc.api-docs.path=/api-docs
