--- a/microservices-parent/docker/standalone/Keycloak/docker-compose.yml
+++ b/microservices-parent/docker/standalone/Keycloak/docker-compose.yml
@@ -1,4 +1,4 @@
-#  docker-compose -p postgres-local -f docker-compose.yml up -d
+#  docker-compose -p keycloak-local -f docker-compose.yml up -d
 
 services:
 
@@ -21,8 +21,15 @@ services:
     environment:
       - KC_DB=postgres
       - KC_DB_URL_HOST=postgres-keycloak
+      - KC_DB_URL_PORT=5432
+      - KC_DB_URL_DATABASE=keycloak
       - KC_DB_USERNAME=keycloak
       - KC_DB_PASSWORD=password
       - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_PASSWORD=password
+      - KEYCLOAK_ADMIN_PASSWORD=password
+      - KC_HOSTNAME=keycloak
+      - KC_HOSTNAME_STRICT=false
+      - KC_HOSTNAME_STRICT_HTTPS=false
+    command:
+      - start-dev
     container_name: keycloak
