--- a/microservices-parent/inventory-service/src/main/resources/application-docker.properties
+++ b/microservices-parent/inventory-service/src/main/resources/application-docker.properties
@@ -1,8 +1,10 @@
 spring.application.name=inventory-service
 
 server.port=8083
+# Lesson 6.1
+inventory-service.version=v1.0
 
-spring.datasource.url=jdbc:postgresql://postgres-inventory:5433/inventory-service
+spring.datasource.url=jdbc:postgresql://postgres-inventory:5432/inventory_service
 
 spring.datasource.username=admin
 spring.datasource.password=password
@@ -11,3 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
+
+# Lesson 6.1
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
