--- a/microservices-parent/inventory-service/src/main/resources/application.properties
+++ b/microservices-parent/inventory-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=inventory-service
 
 server.port=8083
+# Lesson 6.1
+inventory-service.version=v1.0
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/inventory_service
 spring.datasource.username=admin
@@ -9,3 +11,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
+# Lesson 6.1
+# Swagger documentation location - ex. http://localhost:8083/swagger-ui
+springdoc.swagger-ui.path=/swagger-ui
+# Swagger documentation location - ex. http://localhost:8083/api-docs
+springdoc.api-docs.path=/api-docs
