--- a/microservices-parent/order-service/src/main/resources/application-docker.properties
+++ b/microservices-parent/order-service/src/main/resources/application-docker.properties
@@ -1,13 +1,49 @@
 spring.application.name=order-service
+
 server.port=8082
+# Lesson 6.1
+order-service.version=v1.0
 
 spring.datasource.url=jdbc:postgresql://postgres-order:5432/order_service
+
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=none
 
 inventory.service.url=http://inventory-service:8083
+
+# Lesson 6.1 - Swagger documentation location
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
+
+# Spring Actuator
+# Enables health indicators for the circuit breaker
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.timelimiter.instances.inventory.timeout-duration=10s
+resilience4j.circuitbreaker.instances.inventory.minimum-number-of-calls=5
+
+resilience4j.retry.instances.inventory.max-attempts=3
+resilience4j.retry.instances.inventory.wait-duration=2s
+
+#Kafka Producer Properties - Lesson 9. 2
+spring.kafka.bootstrap-servers=broker:29092
+spring.kafka.template.default-topic=order-placed
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+spring.kafka.producer.properties.schema-registry.url=http://schema-registry:8087
