--- a/microservices-parent/order-service/src/main/resources/application.properties
+++ b/microservices-parent/order-service/src/main/resources/application.properties
@@ -1,16 +1,52 @@
 spring.application.name=order-service
-server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/order_service
+server.port=8082
+# Lesson 6.1
+order-service.version=v1.0
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/order_service
+
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=none
 
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
 
 inventory.service.url=http://localhost:8083
+
+# Lesson 6.1
+# Swagger documentation location - ex. http://localhost:8082/swagger-ui
+springdoc.swagger-ui.path=/swagger-ui
+# Swagger documentation location - ex. http://localhost:8082/api-docs
+springdoc.api-docs.path=/api-docs
+
+# Spring Actuator
+# Enables health indicators for the circuit breaker
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.timelimiter.instances.inventory.timeout-duration=10s
+resilience4j.circuitbreaker.instances.inventory.minimum-number-of-calls=5
+
+resilience4j.retry.instances.inventory.max-attempts=3
+resilience4j.retry.instances.inventory.wait-duration=2s
+
+# Lesson 9.2 - Kafka Broker
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=order-placed
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+spring.kafka.producer.properties.schema-registry.url=http://localhost:8087
