--- a/microservices-parent/product-service/src/main/resources/application.properties
+++ b/microservices-parent/product-service/src/main/resources/application.properties
@@ -1,21 +1,26 @@
 spring.application.name=product-service
+product-service.version=v1.0
 
-# Server Configuration
+#product-service (tomcat) running on port 8084
 server.port=8084
 
-# MongoDB Configuration
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=28017
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=product-service
-
-# Authentication (commented out for local development)
-#spring.data.mongodb.username=admin
-#spring.data.mongodb.password=password
-#spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
+spring.data.mongodb.authentication-database=admin
 
 #Enable Caching
+# Enable Redis as the caching provider
 spring.cache.type=redis
+# Redis connection host
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=password
 spring.cache.redis.time-to-live=60s
+
+#Swagger GUI documentation location - http://localhost:8084/swagger-ui
+springdoc.swagger-ui.path=/swagger-ui
+#Swagger JSON documentation location - http://localhost:8084/api-docs
+springdoc.api-docs.path=/api-docs
